[package]
name = "buchberger"
version = "0.2.0"
authors = ["mikit <mikihito0906@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Provides polynomial operation and buchberger's algorithm implementation"

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
ordered-float = "4.2.2"
num = "0.4.3"
